2016/11/27
---

- Modified scribblec script interface: check

    ./scribblec --help
    
  for new usages.

- Most Scribble demos in 

    modules/core/src/test/scrib/demo
  
  relocated to 
 
    modules/demos/scrib/
   