@@ -2,14 +2,17 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+    <artifactId>scribble-demos</artifactId>
+	<packaging>jar</packaging>
+    <name>Scribble::Modules::Demos</name>
+
   <parent>
     <groupId>org.scribble</groupId>
     <artifactId>parent</artifactId>
     <version>0.3.2-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <artifactId>scribble-demos</artifactId>
-  <name>Scribble::Modules::Demos</name>
+
   <dependencies>
   	<dependency>
   		<groupId>org.scribble</groupId>
